Added GetShipmentHistory API for user
