# storage/api-docs/api-docs.json
@@ -2274,6 +2274,43 @@
                 }
             }
         },
+        "/~tvavisa/masafah/public/api/user/getShipmentHistory": {
+            "get": {
+                "tags": [
+                    "User Shipment"
+                ],
+                "summary": "Get User shipment history",
+                "operationId": "getShipmentHistory",
+                "parameters": [
+                    {
+                        "name": "Accept-Language",
+                        "in": "header",
+                        "description": "user prefered language",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "user access token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "Version",
+                        "in": "header",
+                        "description": "1.0.0",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    }
+                }
+            }
+        },
         "/~tvavisa/masafah/public/api/user/getProfile": {
             "get": {
                 "tags": [
